fixed document summary h3 (overflow: hidden)

--- a/public/packages/resiexchange/apps/assets/css/resiexchange.css
+++ b/public/packages/resiexchange/apps/assets/css/resiexchange.css
@@ -888,6 +888,7 @@ input[type="text"] {
     margin-bottom: 5px;
     line-height: 21px;
     max-height: 63px;
+    overflow: hidden;
 }
 
 .document .summary .excerpt {
