--- a/public/packages/resiexchange/apps/assets/css/resiexchange/document.css
+++ b/public/packages/resiexchange/apps/assets/css/resiexchange/document.css
@@ -439,6 +439,7 @@
     margin-bottom: 5px;
     line-height: 21px;
     max-height: 63px;
+    overflow: hidden;
 }
 
 .document .summary .excerpt {
